# myml

./: pyproject.toml  requirements.txt
myml/: base.py  exception.py
myml/dimension_reduction/: pca.py  testing_pca.ipynb
myml/knn/: house_price_prediction.ipynb  k_neighbors_classifier.py  k_neighbors_regressor.py
myml/linear_model/: __init__.py  house_price_prediction.ipynb  linear.py  testing_linear_regression.ipynb
myml/logistic_regression/: logistic_regression.py
myml/metrics/: classification.py  regression.py
myml/utils/: gradient_descent.py  optimization.py  validation.py
utils/: gradient_descent.py
